--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "apikey": [
-        "sk-xxxxxx"
+        "Input your API key here",
+        "More keys put here, if no detele this line"
     ]
 }
